# odin-emulator

./: .env  Cargo.toml  README.md  build.rs  odin.sqlite
odin-database/: Cargo.toml
odin-database/entity/: Cargo.toml
odin-database/entity/src/: account.rs  account_ban.rs  character.rs  guilds.rs  item.rs  lib.rs  start_item.rs
odin-database/migration/: Cargo.toml
odin-database/migration/src/: m20241026_013531_create_accounts_table.rs  m20241029_210508_characters.rs  m20241029_222100_items.rs  m20241103_141804_start_items.rs
odin-database/src/: account_repository.rs  lib.rs
odin-loginserver/: Cargo.toml
odin-loginserver/src/: main.rs
odin-macros/: Cargo.toml
odin-macros/src/: lib.rs
odin-models/: Cargo.toml
odin-models/src/: account.rs  account_charlist.rs  character.rs  direction.rs  effect.rs  height_map.rs  item.rs  item_data.rs  item_slots.rs  lib.rs  nickname.rs  npc_mob.rs  position.rs  status.rs  storage.rs
odin-networking/: Cargo.toml
odin-networking/src/: enc_session.rs  framed_message.rs  lib.rs
odin-networking/src/messages/: common.rs  header.rs  login.rs  mod.rs  string.rs
odin-networking/src/messages/client/: action.rs  apply_bonus.rs  create_character.rs  delete_character.rs  enter_world.rs  login.rs  mod.rs  numeric_token.rs
odin-networking/src/messages/server/: action.rs  character_login.rs  charlist.rs  create_mob.rs  message_panel.rs  mod.rs  numeric_token.rs  remove_mob.rs  update_etc.rs  update_score.rs
odin-postgresql/: Cargo.toml
odin-postgresql/entity/: Cargo.toml
odin-postgresql/entity/src/: account.rs  account_ban.rs  character.rs  guilds.rs  item.rs  lib.rs  start_item.rs  storage_start_items.rs
odin-postgresql/migration/: Cargo.toml
odin-postgresql/migration/src/: lib.rs  m20241026_013531_create_accounts_table.rs  m20241029_210508_characters.rs  m20241029_222100_items.rs  m20241103_141804_start_items.rs
odin-postgresql/src/: account.rs  account_repository.rs  lib.rs
odin-postgresql/src/entity/: account.rs
odin-repositories/: Cargo.toml
odin-repositories/src/: account_repository.rs
src/: client_id_manager.rs  configuration.rs  game_server_context.rs  main.rs  message.rs  message_handler.rs  score.rs  session.rs  session_manager.rs  user_session.rs  world.rs
src/handlers/: authentication.rs  create_character.rs  delete_character.rs  mod.rs  numeric_token.rs
src/handlers/gameplay/: action.rs  apply_bonus.rs  mod.rs
src/handlers/login/: authentication.rs  create_character.rs  delete_character.rs  enter_world.rs  mod.rs  numeric_token.rs
src/map/: mod.rs  spatial_grid.rs
src/npc/: loading.rs  mob_id_allocator.rs  mod.rs  movement.rs  pathfinding.rs  spawn_group.rs  spawn_manager.rs  tick.rs
src/packets/: character_login.rs  create_mob.rs  mod.rs  update_etc.rs  update_score.rs
src/score/: base.rs  critical.rs  equipment.rs  mod.rs
src/services/: equipments.rs  inventory.rs  mod.rs
