[package]
name = "odin-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["postgresql"]
postgresql = ["dotenvy", "odin-postgresql"]

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
deku = "0.18.0"
env_logger = "0.11.5"
futures = "0.3.29"
log = "0.4.20"
message-io = { version = "0.18.2", default-features = false, features = ["tcp", "udp"]  }
odin-models = { path = "./odin-models" }
odin-networking = { path = "./odin-networking" }
odin-postgresql = { path = "./odin-postgresql", optional = true }
odin-repositories = { path = "./odin-repositories" }
dotenvy = { version = "0.15", optional = true }
thiserror = "1.0.50"
tokio = { version = "1.41.0", features = ["macros", "rt", "rt-multi-thread"] }
chrono = "0.4.38"

[workspace]
members = [
    "odin-models",
    "odin-macros",
    "odin-networking",
    "odin-postgresql",
    "odin-postgresql/entity",
    "odin-postgresql/migration",
    "odin-repositories"
]
