[package]
name = "odin-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
postgresql = ["dotenvy", "odin-database", "odin-database/postgresql"]
sqlite = ["dotenvy", "odin-database", "odin-database/sqlite" ]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.4.8", features = ["derive"] }
deku = "0.18.0"
dotenvy = { version = "0.15", optional = true }
env_logger = "0.11.5"
futures = "0.3.29"
log = "0.4.20"
message-io = { version = "0.18.2", default-features = false, features = ["tcp"]  }
odin-database = { path = "./odin-database", optional = true }
odin-macros = { path = "./odin-macros" }
odin-models = { path = "./odin-models" }
odin-networking = { path = "./odin-networking" }
odin-repositories = { path = "./odin-repositories" }
thiserror = "1.0.50"
tokio = { version = "1.41.0", features = ["macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
odin-database = { path = "./odin-database", features = ["sqlite"] }
rstest = { version = "0.23.0" }

[workspace]
members = [
    "odin-models",
    "odin-macros",
    "odin-networking",
    "odin-database",
    "odin-database/entity",
    "odin-database/migration",
    "odin-repositories"
]
