[package]
name = "odin-emulator"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
postgresql = ["dotenvy", "odin-database", "odin-database/postgresql"]
sqlite = ["dotenvy", "odin-database", "odin-database/sqlite" ]

[dependencies]
bytes = "1.5.0"
chrono = "0.4.38"
clap = { version = "4.4.8", features = ["derive"] }
deku = "0.18.0"
dotenvy = { version = "0.15", optional = true }
env_logger = "0.11.5"
log = "0.4.20"
odin-database = { path = "./odin-database", optional = true }
odin-macros = { path = "./odin-macros" }
odin-models = { path = "./odin-models" }
odin-networking = { path = "./odin-networking" }
odin-repositories = { path = "./odin-repositories" }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.50"
toml = "0.8"
tokio = { version = "1.41.0", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "sync"] }

[profile.dev]
opt-level = 1

[dev-dependencies]
odin-database = { path = "./odin-database", features = ["sqlite"] }
rstest = { version = "0.23.0" }

[workspace]
members = [
    "odin-models",
    "odin-macros",
    "odin-networking",
    "odin-database",
    "odin-database/entity",
    "odin-database/migration",
    "odin-repositories"
]
