[package]
name = "odin-postgresql"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
migration = { path = "migration" }
odin-models = { path = "../odin-models" }
odin-repositories = { path = "../odin-repositories" }
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
thiserror = "1.0.65"
